--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 SVN_PATH=https://subversion.assembla.com/svn/wethejumpingspiders/trunk/server/Finance-AppEngine/trunk/FinanceJSONFiles/
-USERNAME=selanthiraiyan
-PASSWORD=arrsac10
+USERNAME=
+PASSWORD=
 PACKAGENAME=com.wethejumpingspiders.finance.pojo
 JAR_FILE=tool//kmbmodel-android.jar
 DEVICE=android
